Bug 513855 - Transform and move tool eat arrow key inputs in docks
Summary: Transform and move tool eat arrow key inputs in docks
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.2.2
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2025-12-26 22:05 UTC by tapatilorenzo
Modified: 2026-01-16 13:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tapatilorenzo 2025-12-26 22:05:24 UTC
███ Summary
Keyboard shortcut collision between move to prev/next animation frame and transform tool's nudge left/right when active.

███ Steps to reproduce
1. Open Krita and set workspace to Animation
2. Right-click the first animation frame in the animation timeline, click "Create duplicate frame"
3. make any selection canvas, switch to transform tool, and use left/right arrowkeys

███ Observed result
The active animation frame will change when you click left or right arrowkeys.

███ Expected result
Since a selection was just made, the user expects to be nudging that selection. Especially because there is a change in what handles the keyboard shortcut after the animation timeline has been focused once, even though it's not focused now, which is unexpected.

███ Software/OS versions
Linux Mint 22.2 Cinnamon (Ubuntu-based)
Krita 5.2.2
Comment 1 dra.w.p.il.e+bugskde 2025-12-27 00:36:19 UTC
The issue is real, but the description is inaccurate. I'll rephrase to correct it. Also, please don't play with the formatting in the future, it's sufficient to fill in the template provided.

SUMMARY
Transform and move tools eat arrow key inputs from several dock widgets, such as the animation timeline or palette.

STEPS TO REPRODUCE
1. Equip the transform or move tool.
2. Click on the timeline dock or palette dock or several other widgets that would react to arrow key navigation.
3. Press arrow keys.

OBSERVED RESULT
The arrow keys go to the tool instead, possibly moving stuff on the canvas around.

EXPECTED RESULT
Arrow keys navigate in the focused docker.

ADDITIONAL INFORMATION
Some widgets aren't affected by this, such as text inputs or spinner sliders. So this seems like it may be a focus policy problem.
Comment 2 tapatilorenzo 2025-12-27 10:27:26 UTC
Opposite. The animation docker eats the input.
Comment 3 dra.w.p.il.e+bugskde 2025-12-27 11:12:11 UTC
Okay, that explains why the report is so weird. I can't reproduce that, so it may be due to the two years outdated Krita version you are using. Update it and try again. If it still doesn't work as expected, your steps to reproduce are probably incomplete or there's other information missing that makes this not reproducible, like a pre-existing state of the canvas.
Comment 4 tapatilorenzo 2025-12-27 12:32:17 UTC
In latest it doesn't repro. I thought 5.2.2 was recent because I've only had this laptop for a month, I'm not sure how it's actually 2 years out of date, but you're right. Sorry for the trouble. Setting to resolved, not a bug.
Comment 5 dra.w.p.il.e+bugskde 2025-12-27 13:05:17 UTC
You did actually find a bug here, even if it was unintentional! The move and transform tools do eat arrow keys when they shouldn't.
Comment 6 Dmitry Kazakov 2026-01-16 12:56:53 UTC
Git commit c463e9c0a08228b6a0412faa3994d80dc07b4e94 by Dmitry Kazakov.
Committed on 16/01/2026 at 12:56.
Pushed by dkazakov into branch 'master'.

Fix Transform and Move shortcuts conflicting Timeline arrow key actions

When Transform or Move tools don't have any stroke running, the
move shortcuts should **not** override arrow key shortcuts. These
actions don't do anything anyway.

M  +37   -0    libs/ui/tool/kis_tool_utils.cpp
M  +32   -0    libs/ui/tool/kis_tool_utils.h
M  +9    -10   plugins/tools/basictools/kis_tool_move.cc
M  +3    -1    plugins/tools/basictools/kis_tool_move.h
M  +8    -8    plugins/tools/tool_transform2/kis_tool_transform.cc
M  +3    -0    plugins/tools/tool_transform2/kis_tool_transform.h

https://invent.kde.org/graphics/krita/-/commit/c463e9c0a08228b6a0412faa3994d80dc07b4e94
Comment 7 Dmitry Kazakov 2026-01-16 13:02:13 UTC
Git commit 3a5773bf2e789d5a040a8c34f0db54e933b7ad85 by Dmitry Kazakov.
Committed on 16/01/2026 at 13:01.
Pushed by dkazakov into branch 'krita/5.2'.

Fix Transform and Move shortcuts conflicting Timeline arrow key actions

When Transform or Move tools don't have any stroke running, the
move shortcuts should **not** override arrow key shortcuts. These
actions don't do anything anyway.

M  +38   -0    libs/ui/tool/kis_tool_utils.cpp
M  +33   -0    libs/ui/tool/kis_tool_utils.h
M  +9    -10   plugins/tools/basictools/kis_tool_move.cc
M  +3    -1    plugins/tools/basictools/kis_tool_move.h
M  +8    -8    plugins/tools/tool_transform2/kis_tool_transform.cc
M  +3    -0    plugins/tools/tool_transform2/kis_tool_transform.h

https://invent.kde.org/graphics/krita/-/commit/3a5773bf2e789d5a040a8c34f0db54e933b7ad85