Fix Transform and Move shortcuts conflicting Timeline arrow key actions

When Transform or Move tools don't have any stroke running, the
move shortcuts should **not** override arrow key shortcuts. These
actions don't do anything anyway.

BUG:513855