libs/ui/tool/kis_tool_utils.cpp
@@ -29,6 +29,8 @@
 #include <KisViewManager.h>
 #include <kis_node_manager.h>
 #include <KoSelection.h>
+#include <kis_action_registry.h>
+#include <KoToolBase.h>
 
 
 #include "KisAnimAutoKey.h"
@@ -398,4 +400,39 @@ namespace KisToolUtils {
         return true;
     }
 
+
+    MoveShortcutsHelper::MoveShortcutsHelper(KoToolBase *tool)
+        : m_tool(tool)
+    {
+    }
+
+    QList<QAction*> MoveShortcutsHelper::createActions()
+    {
+        KisActionRegistry *actionRegistry = KisActionRegistry::instance();
+        QList<QAction *> actions;
+
+        actions << actionRegistry->makeQAction("movetool-move-up", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-down", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-left", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-right", actionRegistry);
+
+        actions << actionRegistry->makeQAction("movetool-move-up-more", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-down-more", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-left-more", actionRegistry);
+        actions << actionRegistry->makeQAction("movetool-move-right-more", actionRegistry);
+
+        return actions;
+    }
+
+    void MoveShortcutsHelper::setInternalMoveShortcutsEnabled(bool value)
+    {
+        m_tool->action("movetool-move-up")->setEnabled(value);
+        m_tool->action("movetool-move-down")->setEnabled(value);
+        m_tool->action("movetool-move-left")->setEnabled(value);
+        m_tool->action("movetool-move-right")->setEnabled(value);
+        m_tool->action("movetool-move-up-more")->setEnabled(value);
+        m_tool->action("movetool-move-down-more")->setEnabled(value);
+        m_tool->action("movetool-move-left-more")->setEnabled(value);
+        m_tool->action("movetool-move-right-more")->setEnabled(value);
+    }
 }
