plugins/tools/tool_transform2/kis_tool_transform.cc
@@ -112,6 +112,7 @@ KisToolTransform::KisToolTransform(KoCanvasBase * canvas)
             dynamic_cast<KisCanvas2*>(canvas)->coordinatesConverter(),
             dynamic_cast<KisCanvas2*>(canvas)->snapGuide(),
             m_currentArgs, m_transaction))
+    , m_moveShortcutsHelper(this)
 {
     m_canvas = dynamic_cast<KisCanvas2*>(canvas);
     Q_ASSERT(m_canvas);
@@ -822,6 +823,8 @@ void KisToolTransform::activate(const QSet<KoShape*> &shapes)
     /// factory() is not yet initialized, so we cannot get toolId()
     slotGlobalConfigChanged();
 
+    m_moveShortcutsHelper.activate();
+
     m_actionConnections.addConnection(action("movetool-move-up"), SIGNAL(triggered(bool)),
                                       this, SLOT(slotMoveDiscreteUp()));
     m_actionConnections.addConnection(action("movetool-move-up-more"), SIGNAL(triggered(bool)),
@@ -851,6 +854,7 @@ void KisToolTransform::deactivate()
 {
     endStroke();
     m_canvas->updateCanvas();
+    m_moveShortcutsHelper.deactivate();
     m_actionConnections.clear();
     KisTool::deactivate();
 }
@@ -1012,6 +1016,7 @@ void KisToolTransform::startStroke(ToolTransformArgs::TransformMode mode, bool f
     }
 
     m_strokeId = image()->startStroke(strategy);
+    m_moveShortcutsHelper.startMoveAction();
 
     if (!m_currentlyUsingOverlayPreviewStyle) {
         m_asyncUpdateHelper.initUpdateStreamLowLevel(image().data(), m_strokeId);
@@ -1039,6 +1044,7 @@ void KisToolTransform::endStroke()
     }
 
     image()->endStroke(m_strokeId);
+    m_moveShortcutsHelper.endMoveAction();
 
     m_strokeStrategyCookie = 0;
     m_strokeId.clear();
@@ -1117,6 +1123,7 @@ void KisToolTransform::cancelStroke()
     }
 
     image()->cancelStroke(m_strokeId);
+    m_moveShortcutsHelper.cancelMoveAction();
     m_strokeStrategyCookie = 0;
     m_strokeId.clear();
     m_changesTracker.reset();
@@ -1456,14 +1463,7 @@ QList<QAction *> KisToolTransformFactory::createActionsImpl()
     KisActionRegistry *actionRegistry = KisActionRegistry::instance();
     QList<QAction *> actions = KisToolPaintFactoryBase::createActionsImpl();
 
-    actions << actionRegistry->makeQAction("movetool-move-up", this);
-    actions << actionRegistry->makeQAction("movetool-move-down", this);
-    actions << actionRegistry->makeQAction("movetool-move-left", this);
-    actions << actionRegistry->makeQAction("movetool-move-right", this);
-    actions << actionRegistry->makeQAction("movetool-move-up-more", this);
-    actions << actionRegistry->makeQAction("movetool-move-down-more", this);
-    actions << actionRegistry->makeQAction("movetool-move-left-more", this);
-    actions << actionRegistry->makeQAction("movetool-move-right-more", this);
+    actions << KisToolUtils::MoveShortcutsHelper::createActions();
 
     auto makeSubtoolAction = [&actionRegistry, &actions, this](QString actionName, const char *slot) {
         QAction *action = actionRegistry->makeQAction(actionName, this);
